// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toast Component Rendering should render matching snapshot for error toast 1`] = `
<View
  collapsable={false}
  style={
    {
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
      "transform": [
        {
          "translateY": -100,
        },
      ],
      "zIndex": 9999,
    }
  }
>
  <View
    accessibilityLabel="error toast: Error message"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
  >
    <View
      className="px-4 py-2.5 w-full bg-bg-danger"
    >
      <Text
        accessibilityRole="text"
        className="text-white text-2xs font-montserrat-regular text-center"
      >
        Error message
      </Text>
    </View>
  </View>
</View>
`;

exports[`Toast Component Rendering should render matching snapshot for success toast 1`] = `
<View
  collapsable={false}
  style={
    {
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
      "transform": [
        {
          "translateY": -100,
        },
      ],
      "zIndex": 9999,
    }
  }
>
  <View
    accessibilityLabel="success toast: Success message"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
  >
    <View
      className="px-4 py-2.5 w-full bg-green-600"
    >
      <Text
        accessibilityRole="text"
        className="text-white text-2xs font-montserrat-regular text-center"
      >
        Success message
      </Text>
    </View>
  </View>
</View>
`;
